@@ -1,3 +1,8 @@
+2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b25
+
+	* Reformat output of check_versions.php to make it more amenable to 
+	  style sheets.
+
 2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b24
 
         * Added check_versions to gallery check page, to check that gallery
